--- a/Magazin-Hardware/Magazin-Hardware/Magazin-Hardware.csproj
+++ b/Magazin-Hardware/Magazin-Hardware/Magazin-Hardware.csproj
@@ -89,6 +89,12 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="PlasareComanda.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="PlasareComanda.Designer.cs">
+      <DependentUpon>PlasareComanda.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Register.cs">
@@ -103,6 +109,12 @@
     </Compile>
     <Compile Include="UserDashbord.Designer.cs">
       <DependentUpon>UserDashbord.cs</DependentUpon>
+    </Compile>
+    <Compile Include="VizualizareComenziUser.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="VizualizareComenziUser.Designer.cs">
+      <DependentUpon>VizualizareComenziUser.cs</DependentUpon>
     </Compile>
     <EmbeddedResource Include="AddProd.resx">
       <DependentUpon>AddProd.cs</DependentUpon>
@@ -125,6 +137,9 @@
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="PlasareComanda.resx">
+      <DependentUpon>PlasareComanda.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Resources.Designer.cs</LastGenOutput>
@@ -140,6 +155,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="UserDashbord.resx">
       <DependentUpon>UserDashbord.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="VizualizareComenziUser.resx">
+      <DependentUpon>VizualizareComenziUser.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
